--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,7 @@ padding: 0px;
 display: flex;
 flex-direction: row;
 justify-content: space-between;
-min-height: 95vh;
+min-height: 60vh;
 margin: 0;
 padding: 0;
 background-color: white;
@@ -65,8 +65,26 @@ height: auto;
 vertical-align: top;
 }
 
-img, .dog {
-width: 100%;
-height: auto;
-border-radius: 100;
+img.dog {
+width: 50px;
+height: 50px;
+border-radius: 20px;
+margin: 5px;
+}
+
+.doglist {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+    margin: 10px;
+    background: #ccffff;
+    border-radius: 25px;
+    text-align: left;
+    vertical-align: middle;
+}
+
+.lamp {
+    font-size: 50px;
 }
