--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  /* max-width: 1280px; */
+  margin: 0;
+  padding: 0px;
+  min-height: 65vh;
   text-align: center;
 }
 
